--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python = "^3.9"
 click = ">=8.0.1"
 loguru = "^0.7.2"
 platformdirs = "^4.2.2"
+fsspec = "^2024.6.0"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
