--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ loguru = "^0.7.2"
 platformdirs = "^4.2.2"
 fsspec = "^2024.6.0"
 adlfs = "^2024.4.1"
+pydantic = "^2.7.4"
+azure-identity = "^1.17.1"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
